# screen-recorder

./: README.rst
linux/: Cargo.toml  README.rst
linux/src/: main.rs
osx/: Makefile  README.rst
windows/: README.rst  make.bat  record-screen.cs  windowList.cs
windows/helloworld/: helloworld.cs  make.bat
