[package]
name = "screen-record"
version = "0.1.0"
authors = ["Luo <gnulinux@126.com>"]


# http://doc.crates.io/manifest.html
# Target    : https://github.com/rust-lang/rust/tree/master/mk/cfg
# cfg       : https://doc.rust-lang.org/book/conditional-compilation.html
# cargo cfg : https://github.com/rust-lang/rfcs/blob/master/text/1361-cargo-cfg-dependencies.md
# rustc --print cfg
# [target."cfg(windows)".dependencies]
# winapi = "*"

# [target.'cfg(target_os = "macos")'.dependencies]
# core-foundation = "0.2"


[target.'cfg(target_os = "linux")'.dependencies]
x11cap = "*"

[features]
default = []

[dependencies]
screenshot = "*"
image      = "*"
bmp        = "*"


